--- a/Css/style.css
+++ b/Css/style.css
@@ -146,7 +146,6 @@ header::after {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-inline: 15px;
 }
 
 #Albums .Album-desc h1 {
@@ -157,7 +156,7 @@ header::after {
     color: #000;
     font-weight: 500;
     border-radius: 15px;
-    padding: 6px;
+    padding: 6px 6px;
 }
 
 
