--- a/Css/style.css
+++ b/Css/style.css
@@ -53,6 +53,7 @@ nav #menu {
     justify-content: center;
     align-items: center;
     gap: 35px;
+    margin-right: 2rem;
 }
 
 nav #menu a {
@@ -849,13 +850,36 @@ header::after {
 
 #About-Us #About-Container .About-img{
     padding-left: 35px;
+    border-radius: 70px;    
+    position: relative;
 }
 
 #About-Us #About-Container .About-img img{
     max-width: 30rem;
     height: 800px;
     border-radius: 70px;
+    box-shadow: 10px 10px 35px #ffffff75;
+    /* animation: glow 2s infinite ease-in; */
 }
+
+/* #About-Us #About-Container .About-img::after{
+    content: "";
+    width: calc(100% + 10px);
+    height: 100%;
+    background: red;
+    position: absolute;
+    top: 0;
+    left: 0;
+} */
+
+/* @keyframes glow {
+    0%,100%{
+        box-shadow: 10px 10px 20px violet;
+    }
+    50%{
+        box-shadow: 10px 10px 20px rgb(0, 119, 255);
+    }
+} */
 
 #About-Us #About-Container .About-desc{
     display: flex;
